<resources>
    <string name="app_name">JRow</string>
    <string name="strokerate_default">0 st / min</string>

    <string name="dummy_rower" translatable="false">R1: </string>
    <string name="dummy_delay" translatable="false">0.000 s</string>
    <string name="start_pause" translatable="false">Start/Pause</string>
    <string name="calibrate">calibrate</string>
    <string name="jrow" translatable="false">JRow</string>
    <string name="strokes_per_min">%1$.2f str / min</string>
    <string name="delay" translatable="false">%1$.3f s</string>
    <string name="time_default" translatable="false">0.00 s</string>
    <string name="cox">Coxswain</string>
    <string name="cox_9">(Cox) 9.</string>
    <string name="rower">Rower</string>
    <string name="rower8">Rower8</string>
    <string name="stern_8">(Stern) 8.</string>
    <string name="rower7">Rower7</string>
    <string name="_7" translatable="false">7.</string>
    <string name="rower6">Rower6</string>
    <string name="_6" translatable="false">6.</string>
    <string name="rower5">Rower5</string>
    <string name="_5" translatable="false">5.</string>
    <string name="rower4">Rower4</string>
    <string name="_4" translatable="false">4.</string>
    <string name="rower3">Rower3</string>
    <string name="_3" translatable="false">3.</string>
    <string name="rower2">Rower2</string>
    <string name="_2" translatable="false">2.</string>
    <string name="rower1">Rower1</string>
    <string name="bow_1">(Bow) 1.</string>
    <string name="crew">Crew</string>
    <string name="start_ntraining">Start\ntraining</string>
    <string name="time" translatable="false">%1$.2f s</string>
    <string name="save_this_training">Save this training ?</string>
    <string name="rows_front">Rows front…</string>
    <string name="rows_neutral">Rows perpendicuclar…</string>
    <string name="race_time_format" translatable="false">%1$d : %2$d : %3$d</string>
    <string name="rows_back">Rows back…</string>
    <string name="calibration_wrong_angle_front">%1$s has his row in front of the registered neutral angle</string>
    <string name="calibration_wrong_angle_behind">%1$s has not his row behind the registered neutral position</string>
    <string name="select_training_name">Please select a name for your training</string>
    <string name="calibration_done">Calibration done !</string>
    <string name="calibration_failed">Calibration failed…</string>
    <string name="unable_to_connect_arduino">Unable to connect to Arduino</string>
    <string name="graph">Graph</string>
    <string name="loadbar">Loadbar</string>
    <string name="race">Race !</string>
    <string name="terminal">Terminal</string>
    <string name="calibration">Calibration…</string>
    <string name="wait_message">Wait while connecting to the Arduino...</string>
    <string name="connecting">Connecting</string>
</resources>
