<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/prepare_training_picture2"
        android:scaleType="centerCrop"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="-30dp"/>

    <TextView
        android:id="@+id/crew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/crew"
        android:textSize="36sp"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginTop="@dimen/margin_big"
        android:shadowColor="@color/white"
        android:shadowRadius="10"
        android:shadowDy="0"
        android:shadowDx="0"/>


    <ImageView
        android:id="@+id/next"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_action_arrow_right"
        android:layout_alignBottom="@+id/crew"
        android:layout_alignTop="@+id/crew"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/margin_big"
        android:scaleType="fitCenter"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/crew"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="150dp"
        android:layout_marginTop="@dimen/margin_big"
        android:layout_marginBottom="@dimen/margin_big"
        android:stretchColumns="1">

        <TableRow
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/bow_1"
                android:textAlignment="textEnd"
                android:layout_marginEnd="@dimen/margin_small"
                android:textSize="@dimen/text_normal" />

            <EditText
                android:id="@+id/name1"
                android:textColor="@color/white"
                android:hint="@string/rower1"
                android:textColorHint="@color/light_gray"
                android:textSize="@dimen/text_normal"
                />

        </TableRow>
        <TableRow
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textAlignment="textEnd"
                android:text="@string/_2"
                android:layout_marginEnd="@dimen/margin_small"
                android:textSize="@dimen/text_normal"/>

            <EditText
                android:id="@+id/name2"
                android:textColor="@color/white"
                android:hint="@string/rower2"
                android:textColorHint="@color/light_gray"
                android:textSize="@dimen/text_normal"
                />

        </TableRow>
        <TableRow
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textAlignment="textEnd"
                android:text="@string/_3"
                android:layout_marginEnd="@dimen/margin_small"
                android:textSize="@dimen/text_normal"/>

            <EditText
                android:id="@+id/name3"
                android:textColor="@color/white"
                android:hint="@string/rower3"
                android:textColorHint="@color/light_gray"
                android:textSize="@dimen/text_normal"
                />

        </TableRow>
        <TableRow
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textAlignment="textEnd"
                android:text="@string/_4"
                android:layout_marginEnd="@dimen/margin_small"
                android:textSize="@dimen/text_normal"/>

            <EditText
                android:id="@+id/name4"
                android:textColor="@color/white"
                android:hint="@string/rower4"
                android:textColorHint="@color/light_gray"
                android:textSize="@dimen/text_normal"
                />

        </TableRow>
        <TableRow
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textAlignment="textEnd"
                android:text="@string/_5"
                android:layout_marginEnd="@dimen/margin_small"
                android:textSize="@dimen/text_normal"/>

            <EditText
                android:id="@+id/name5"
                android:textColor="@color/white"
                android:hint="@string/rower5"
                android:textColorHint="@color/light_gray"
                android:textSize="@dimen/text_normal"
                />

        </TableRow>
        <TableRow
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textAlignment="textEnd"
                android:text="@string/_6"
                android:layout_marginEnd="@dimen/margin_small"
                android:textSize="@dimen/text_normal"/>

            <EditText
                android:id="@+id/name6"
                android:textColor="@color/white"
                android:hint="@string/rower6"
                android:textColorHint="@color/light_gray"
                android:textSize="@dimen/text_normal"
                />

        </TableRow>
        <TableRow
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textAlignment="textEnd"
                android:text="@string/_7"
                android:layout_marginEnd="@dimen/margin_small"
                android:textSize="@dimen/text_normal"/>

            <EditText
                android:id="@+id/name7"
                android:textColor="@color/white"
                android:hint="@string/rower7"
                android:textColorHint="@color/light_gray"
                android:textSize="@dimen/text_normal"
                />

        </TableRow>
        <TableRow
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textAlignment="textEnd"
                android:text="@string/stern_8"
                android:layout_marginEnd="@dimen/margin_small"
                android:textSize="@dimen/text_normal"/>

            <EditText
                android:id="@+id/name8"
                android:textColor="@color/white"
                android:hint="@string/rower8"
                android:textColorHint="@color/light_gray"
                android:textSize="@dimen/text_normal"
                />

        </TableRow>
        <TableRow
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textAlignment="textEnd"
                android:text="@string/cox_9"
                android:layout_marginEnd="@dimen/margin_small"
                android:textSize="@dimen/text_normal"/>

            <EditText
                android:id="@+id/name_timo"
                android:textColor="@color/white"
                android:hint="@string/cox"
                android:textColorHint="@color/light_gray"
                android:textSize="@dimen/text_normal"
                />

        </TableRow>

    </TableLayout>

</RelativeLayout>